--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <li><a href="#start"><span>Start</span></a></li>
             <li><a href="#resume"><span>Resume</span></a></li>
             <li><a href="#contact"><span>Contact</span></a></li>
+            <li><a href="#comment"><span>Comment</span></a></li>
         </ul>
     </nav>
 
@@ -268,8 +269,8 @@
                             </li> 
                             <li>
                                 <div class="icon-box text-center">
-                                    <span class="icon icon-sm icon-circle icon-primary icon-filled"><i class="ti-camera"></i></span>
-                                    <span class="title">Photography</span>
+                                    <span class="icon icon-sm icon-circle icon-primary icon-filled"><i class="ti-game"></i></span>
+                                    <span class="title">Play Game</span>
                                 </div> 
                             </li> 
                             <li>
@@ -288,7 +289,7 @@
         
     </section>
     <!-- Section - Resume / End -->
-    <!-- Section - Contact -->
+     <!-- Section - Contact -->
     <section id="contact" class="section padding-v-60 min-fullheight">
 
         <!-- BG Map -->
@@ -318,7 +319,6 @@
 
 </div>
 <!-- Content / End -->
-
 <!-- Messanger -->
 <a href="#" id="messenger-toggle" data-target="messenger" class="icon icon-sm icon-circle animated" data-animation="bounceIn" data-animation-delay="300"><i class="fa fa-comments"></i></a>
 <div id="messenger" class="dark">
@@ -327,7 +327,7 @@
             <!-- Close -->
             <a href="#" class="messenger-close icon icon-hover icon-xs icon-circle icon-white" data-target="messenger"><i class="fa fa-times"></i></a>
             <!-- Avatar -->
-            <img src="assets/img/photos/it-avatar-96x96.jpg" alt="..." class="img-circle margin-b-30">
+            <img src="assets/img/photos/avatar72x96.jpg" alt="..." class="img-circle margin-b-30">
             <h3>Please fill the <strong>form</strong> - I will response as fast as I can!</h3>
             <!-- Contact Form -->
             <form id="contact-form">
@@ -358,12 +358,13 @@
 <nav id="mobile-nav" class="bg-white">
     <div class="mobile-nav-wrapper">
         <!-- Avatar -->
-        <img src="assets/img/photos/it-avatar-96x96.jpg" alt="..." class="img-circle margin-b-30">
+        <img src="assets/img/photos/avatar72x96.jpg" alt="..." class="img-circle margin-b30-">
         <!-- Nav -->
         <ul class="nav nav-vertical">
             <li><a href="#start"><span>Start</span></a></li>
             <li><a href="#resume"><span>Resume</span></a></li>
             <li><a href="#contact"><span>Contact</span></a></li>
+            <li><a href="#comment"><span>Comment</span></a></li>
         </ul>
         <!-- Social Media -->
         <div class="margin-t-20">
@@ -382,16 +383,6 @@
 <div id="ajax-modal"></div>
 <div id="ajax-loader"><i class="fa fa-spinner fa-spin"></i></div>
 
-<!-- FB Like -->
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-
 <!-- JS Libraries -->
 <script src="assets/js/jquery-1.11.3.min.js"></script>
 
@@ -406,24 +397,6 @@ window.paceOptions = {
 
 <!-- JS Core -->
 <script src="assets/js/core.min.js"></script>
-<!-- Google Map API -->
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
-
-<!-- Google Analytics: Change UA-XXXXX-X to be your site's ID. Go to http://www.google.com/analytics/ for more information. -->
-<!--
-<script>
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-XXXXX-X']);
-    _gaq.push(['_trackPageview']);
-
-    (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-</script>
--->
-
 </body>
 
 </html>
