--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
 
 <body class="header-vertical">
 
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.11&appId=127563554692313';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 <!-- Loader -->
 <div id="page-loader" class="bg-white"></div>
 <!-- Loader / End -->
@@ -313,7 +322,16 @@
 
     </section>
     <!-- Section - Contact / End -->
-
+    <div class="phanhoi" id="phanhoi">
+    <div class="container text-xs-center">  
+        <div class="row">
+            <div class="col-sm-12">
+                <h2>Phản hồi </h2>      
+            </div>
+            <div class="fb-comments" data-href="https://doublefeel98.github.io/" data-width="576" data-numposts="5"></div>
+        </div>  
+    </div>
+    </div>
 </div>
 <!-- Content / End -->
 <!-- Messanger -->
