--- a/index.html
+++ b/index.html
@@ -321,21 +321,23 @@
         </div>
 
     </section>
-    <!-- Section - Contact / End -->
-    <div class="phanhoi" id="phanhoi">
-    <div class="container text-xs-center">  
-        <div class="row">
-            <div class="col-sm-12">
-                <h2>Phản hồi </h2>      
-            </div>
-            <div class="fb-comments" data-href="https://doublefeel98.github.io/" data-width="576" data-numposts="5"></div>
-        </div>  
-    </div>
-    </div>
 </div>
 <!-- Content / End -->
+<!-- Section - Comment -->
+    <section id="comment" class="section padding-v-60">
+        <!-- Content -->
+        <div class="container container-wide">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <h2>Phản hồi </h2>      
+                    </div>
+                    <div class="fb-comments" data-href="https://doublefeel98.github.io/" data-width="576" data-numposts="5"></div>
+                </div>  
+        </div>
+    </section>
+<!-- Section - Comment / End -->
 <!-- Messanger -->
-<a href="#" id="messenger-toggle" data-target="messenger" class="icon icon-sm icon-circle animated" data-animation="bounceIn" data-animation-delay="300"><i class="fa fa-comments"></i></a>
+<a href="https://www.facebook.com/Thang.HoThai" id="messenger-toggle" data-target="messenger" class="icon icon-sm icon-circle animated" data-animation="bounceIn" data-animation-delay="300"><i class="fa fa-comments"></i></a>
 <div id="messenger" class="dark">
     <div id="messenger-box">
         <div class="messenger-box-content">
