--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <ul class="nav nav-vertical">
             <li><a href="#start"><span>Start</span></a></li>
             <li><a href="#resume"><span>Resume</span></a></li>
-            <li><a href="#contact"><span>Contact</span></a></li>
             <li><a href="#comment"><span>Comment</span></a></li>
+            <li><a href="#contact"><span>Contact</span></a></li>
         </ul>
     </nav>
 
@@ -298,7 +298,18 @@
         
     </section>
     <!-- Section - Resume / End -->
-     <!-- Section - Contact -->
+
+    <!-- Section - Comment -->
+    <section id="comment" class="section padding-v-60">
+        <!-- Content -->
+        <div class="container container-wide">
+                    <div class="col-sm-12"><h2>Phản hồi </h2>   </div>
+                    <div class="fb-comments" data-href="https://doublefeel98.github.io/" data-width="576" data-numposts="5"></div>
+        </div>
+    </section>
+    <!-- Section - Comment / End -->
+    
+    <!-- Section - Contact -->
     <section id="contact" class="section padding-v-60 min-fullheight">
 
         <!-- Contact Box -->
@@ -319,23 +330,9 @@
                 </li>
             </ul>      
         </div>
-
     </section>
 </div>
-<!-- Content / End -->
-<!-- Section - Comment -->
-    <section id="comment" class="section padding-v-60">
-        <!-- Content -->
-        <div class="container container-wide">
-                <div class="row">
-                    <div class="col-sm-12">
-                        <h2>Phản hồi </h2>      
-                    </div>
-                    <div class="fb-comments" data-href="https://doublefeel98.github.io/" data-width="576" data-numposts="5"></div>
-                </div>  
-        </div>
-    </section>
-<!-- Section - Comment / End -->
+
 <!-- Messanger -->
 <a href="https://www.facebook.com/Thang.HoThai" id="messenger-toggle" data-target="messenger" class="icon icon-sm icon-circle animated" data-animation="bounceIn" data-animation-delay="300"><i class="fa fa-comments"></i></a>
 <div id="messenger" class="dark">
